# pico-1in54v2-epaper-lib

./: CMakeLists.txt  README.md  pico_sdk_import.cmake  test.c
lib/: CMakeLists.txt
lib/EPD_1in54_V2/: CMakeLists.txt  EPD_1in54_V2.c  EPD_1in54_V2.h
lib/Fonts/: CMakeLists.txt  fonts.h
lib/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
